feat(api): 添加锁定配方功能并优化隔离相关代码